gccida/g2/qty_compare
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2180:17: error: use of undeclared identifier 'qty_0'
v3 = ( double)( qty_0[v2].size * qty_0[v2].freq * floor_log2_wide( qty_0[v2].n_refs)); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2180:34: error: use of undeclared identifier 'qty_0'
v3 = ( double)( qty_0[v2].size * qty_0[v2].freq * floor_log2_wide( qty_0[v2].n_refs)); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2180:68: error: use of undeclared identifier 'qty_0'
v3 = ( double)( qty_0[v2].size * qty_0[v2].freq * floor_log2_wide( qty_0[v2].n_refs)); 
                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2181:17: error: use of undeclared identifier 'qty_0'
v4 = ( double)( qty_0[v2].death - qty_0[v2].birth); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2181:35: error: use of undeclared identifier 'qty_0'
v4 = ( double)( qty_0[v2].death - qty_0[v2].birth); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2184:22: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v5].size * qty_0[v5].freq * floor_log2_wide( qty_0[v5].n_refs)) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2184:39: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v5].size * qty_0[v5].freq * floor_log2_wide( qty_0[v5].n_refs)) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2184:73: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v5].size * qty_0[v5].freq * floor_log2_wide( qty_0[v5].n_refs)) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2185:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v5].death - qty_0[v5].birth) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/local-alloc.c:2185:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v5].death - qty_0[v5].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/qty_compare/src/obj/local-alloc.o] Error 1
